# WorldQuant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_alpha.py  alpha101_miner.py  alpha50_miner.py  check_correlation.py  deploy.sh  docker-compose.yml  feishu_bot.py  fetch_fields.py  mine.sh  mine_until_ready.py  pipeline.py  pyproject.toml  requirements.txt  run_alpha_miner.py  setup_cron.sh  submit.sh  submit_alpha.py
core/: __init__.py  alpha_db.py  alpha_generator_ollama.py  alpha_lifecycle.py  alpha_orchestrator.py  alpha_store.py  api_session.py  ast_validator.py  async_poller.py  config.py  data_fetcher.py  expression_compiler.py  feishu_client.py  hypothesis_manager.py  improved_alpha_submitter.py  llm_client.py  log_manager.py  machine_lib.py  notifier.py  quality_monitor.py  region_config.py  self_optimizer.py  simulation_slot_manager.py  submission_quota.py
core/data_fetcher/: __init__.py  data_field_fetcher.py  (+2 more)
evolution/: __init__.py  bandits.py  genetic_engine.py  similarity.py
experiments/: README.md  audit_cloud.py  check_field_bug.py  check_heavy_ollama.py  check_ollama_custom.py  manual_breakthrough.py  mutate_alphas.py  pipeline.py  polish_alphas.py
infrastructure/: __init__.py  health_check.py  model_fleet_manager.py  vram_monitor.py
insights/: sample_insight_1.md  theses_cache.json
legacy/: README.md  alpha101_miner.py  alpha50_miner.py
miners/: __init__.py  alpha_expression_miner.py  alpha_expression_miner_continuous.py  machine_miner.py  template_grid_miner.py
tests/: test_orchestrator.py
web/: dashboard.py
